--- a/docstrings/math/interpolators.yaml
+++ b/docstrings/math/interpolators.yaml
@@ -89,16 +89,19 @@ enums:
         description: The value :math:`\mathbf{x}_{0}` is returned for :math:`t<t_{0}`
           (and :math:`\mathbf{x}_{N}` if :math:`t>t_{N}`)
       - name: use_boundary_value_with_warning
-        description: Same as ``use_boundary_value``, but a warning is printed
+        description: Same as ``use_boundary_value``, but a warning is printed to the terminal
       - name: extrapolate_at_boundary
         description: The interpolation scheme is extended beyond the range `t_{0}...t_{N}` without any warning.
           That is, the mathematical equation used to compute the value of :math:`x` in the range :math:`[t_{0}..t_{1}]`
           is used without any checks for :math:`t<t_{0}`  (and equivalently for :math:`t>t_{N}`).
           Warning, using this setting can result in divergent/unrealistic behaviour
-
       - name: extrapolate_at_boundary_with_warning
-        description: Same as ``extrapolate_at_boundary``, but with a warning printed.
-
+        description: Same as ``extrapolate_at_boundary``, but a warning is printed to the terminal
+      - name: use_nan_value
+        description: The program will return an interpolated value filled with NaN entries.
+      - name: use_nan_value_with_warning
+        description: Same as ``use_nan_value``, but a warning is printed to the terminal
+         
   - name: AvailableLookupScheme
     short_summary: "Enumeration of types of behaviour to be used beyond the edges of the interpolation domain."
     extended_summary: |
@@ -128,8 +131,18 @@ enums:
         description: A cubic-spline interpolator is created from the first and last :math:`\max(m/2-1,4)` data points of the
           full data set, and these cubic spline interpolators are used when an interpolation at :math:`t<t_{(m/2-1)}` or :math:`t<t_{N-(m/2)}` is called
 
+      - name: lagrange_cubic_spline_boundary_interpolation_with_warning
+        description: Same as ``lagrange_cubic_spline_boundary_interpolation``, but a warning is printed to the terminal
+
+
       - name: lagrange_no_boundary_interpolation
-        description: he program will terminate with an error message when the Lagrange interpolator is interrogated beyond its valid range
+        description: The program will terminate with an exception when the Lagrange interpolator is interrogated beyond its valid range
+
+      - name: lagrange_boundary_nan_interpolation
+        description: The program will return an interpolated value filled with NaN entries.
+
+      - name: lagrange_boundary_nan_interpolation_with_warning
+        description: Same as ``lagrange_boundary_nan_interpolation``, but a warning is printed to the terminal
 
 functions:
 
